Set position on share to fixed and add box-shadow for readability.

--- a/sass/components/_share.scss
+++ b/sass/components/_share.scss
@@ -3,7 +3,7 @@
     display: none;
 
     @media screen and (min-width: map-get($grid-breakpoints, "lg")) {
-        position: absolute;
+        position: fixed;
         display: block;
         right: 0;
         top: 50%;
@@ -30,7 +30,8 @@
                 width: 116%;
                 left: -8%;
                 top: 60%;
-                z-index: -1;
+                z-index: -1;    
+                box-shadow: 0px -4px 10px rgba($black,0.4);
             }
         }
 
